added photo, updated code

--- a/index.html
+++ b/index.html
@@ -16,4 +16,7 @@
   <img src="./AYClogo.png" class="logo">
   <img src="./AYC.png"  class="banner">
 </header>
+<body>
+  <img src="./lwd.jpg" class="photo">
+</body>
 </html>
